# autocorrect

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
autocorrect/: CLAUDE.md
autocorrect-app/: .gitignore  AGENTS.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  COMPLETION_SUMMARY.md  CRASH_DEBUG.md  CSPELL_DEBUGGING.md  CSPELL_DICTIONARIES_INTEGRATION.md  CSPELL_INTEGRATION_COMPLETE.md  CUSTOM_CORRECTIONS_UI_COMPLETE.md  CUSTOM_TYPOS.md  CUSTOM_TYPOS_ZH.md  HANDOFF.md  README.md  SESSION_SUMMARY.md  TESTING.md  TESTING_TYPOS_DISPLAY.md  TYPOS_LIMITATIONS.md  TYPO_DICTIONARY.md  ai-popup.html  demo.sh  eslint.config.js  index.html  overlay.html  package-lock.json  package.json  pnpm-lock.yaml  popup.html  test-popup-data.html  test_cspell.sh  tsconfig.app.json  tsconfig.json  vite.config.ts  widget.html
autocorrect-app/src-tauri/: CLAUDE.md  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
autocorrect-app/src-tauri/capabilities/: CLAUDE.md  default.json  desktop.json
autocorrect-app/src-tauri/dictionaries/: cspell-bundled.txt
autocorrect-app/src-tauri/examples/: test_spell_check.rs
autocorrect-app/src-tauri/src/: CLAUDE.md  ai_popup.rs  clipboard.rs  commands.rs  cspell.rs  hotkey.rs  lib.rs  macos_geom.rs  macos_text.rs  main.rs  objc2_compat.rs  overlay.rs  popup.rs  text_selection.rs  text_utils.rs  theme.rs  theme_errors.rs  typocheck.rs
autocorrect-app/src-tauri/src/commands/: CLAUDE.md  ai_grammar.rs  config.rs  custom_corrections.rs  errors.rs  hotkey_config.rs  ignored_apps.rs  shortcut_recorder.rs  spellcheck.rs
(+56 files in other folders)
