[package]
name = "autocorrect-app"
version = "0.1.0"
description = "AutoCorrect desktop application - A system-wide text correction tool"
authors = ["AutoCorrect Contributors"]
license = "MIT"
repository = "autocorrect/autocorrect"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "autocorrect_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
thiserror = "2.0.12"
tokio = { version = "1", features = ["time"] }
autocorrect = { path = "../../autocorrect" }
enigo = "0.2"
# Use forked rdev that fixes macOS crash issue (see Tauri discussion #7839)
rdev = { git = "https://github.com/fufesou/rdev" }
arboard = "3"
dirs = "5.0"
# Typos for spell checking
typos = "0.10.36"
typos-cli = "1.37.1"
toml = "0.8"
tauri-plugin-store = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.24"
cocoa = "0.26"
objc = "0.2"
